# ticket-analysis-cli

./: .gitignore  README.md  config.ini.example  config.json.example  pyproject.toml  requirements-dev.txt  requirements.txt  run_ticket_analyzer.py  s-docs.md  setup.py  ticket-analyzer  verify-installation.py
.kiro/hooks/: update-documentation.kiro.hook
.kiro/specs/ticket-analysis-cli/: design.md  requirements.md  tasks.md
.kiro/steering/: README.md  authentication-security.md  clean-architecture-patterns.md  cli-development-standards.md  data-sanitization.md  dependency-management.md  design-patterns.md  development-workflow.md  documentation-standards.md  mcp-integration-architecture.md  python-coding-standards.md  secure-coding-practices.md  testing-standards.md
docs/: README.md  __init__.py  api.md  architecture.md  cli-reference.md  contributing.md  deployment.md  developer-guide.md  development.md  extension-guide.md  operations.md  performance.md  release-process.md  security.md  testing.md
docs/decisions/: ADR-001-clean-architecture.md  ADR-002-mcp-integration.md  ADR-003-strategy-pattern-analysis.md  README.md
examples/: README.md  bulk-analysis.py  config-advanced.json  config-minimal.json  config-team.json  config.ini.example  config.json.example  cron-setup.sh  daily-analysis.sh  dev-config.json  github-actions.yml  integration-example.py  jenkins-pipeline.groovy  setup-dev-env.sh  team-report.sh
prompt-docs/: ticket_analyzer_prompt.md
templates/: __init__.py  detailed_metrics.html  report.html  summary.html  trends.html
tests/: __init__.py  conftest.py
tests/test_analysis/: __init__.py  test_analysis_service.py  test_calculators.py  test_data_processor.py  test_error_handling.py  test_integration.py  test_performance.py  test_statistical_functions.py  test_strategies.py  test_trends.py
tests/test_auth/: __init__.py  test_auth_validator.py  test_midway_auth.py  test_session.py
tests/test_cli/: __init__.py  test_analyze_command.py  test_config_command.py  test_main.py  test_options.py  test_report_command.py  test_shared.py  test_signals.py  test_utils.py
tests/test_config/: __init__.py  test_config_manager.py  test_environment_variables.py  test_file_parsing.py  test_handlers.py  test_validation.py
tests/test_data_retrieval/: __init__.py  test_mcp_client.py  test_mcp_ticket_repository.py  test_resilience.py  test_validation.py  test_validation_simple.py
tests/test_models/: __init__.py  test_analysis.py  test_config.py  test_exceptions.py  test_ticket.py
tests/test_reporting/: __init__.py  test_cli_reporter.py
tests/test_reporting/test_html/: __init__.py  test_charts.py  test_html_reporter.py
themes/: sample_custom.json
ticket_analyzer/: __init__.py  __main__.py  app.py  container.py  interfaces.py  models.py  service_integration.py
ticket_analyzer/analysis/: __init__.py  analysis_service.py  calculators.py  data_processor.py  strategies.py  trends.py
ticket_analyzer/auth/: __init__.py  auth_validator.py  midway_auth.py  session.py
ticket_analyzer/cli/: __init__.py  main.py  options.py  shared.py  signals.py  utils.py
ticket_analyzer/cli/commands/: __init__.py  analyze.py  config.py  report.py
ticket_analyzer/config/: __init__.py  config_manager.py  handlers.py
ticket_analyzer/data_retrieval/: __init__.py  mcp_ticket_repository.py  validation.py
ticket_analyzer/logging/: __init__.py  logger.py
ticket_analyzer/models/: __init__.py  analysis.py  config.py  exceptions.py  ticket.py
ticket_analyzer/monitoring/: __init__.py  alerts.py  metrics.py
ticket_analyzer/reporting/: __init__.py  charts.py  cli_reporter.py  formatters.py  html_reporter.py  progress.py  themes.py
ticket_analyzer/security/: __init__.py  file_ops.py  logging.py  sanitizer.py  validation.py
